--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^5.1.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "1.1.0"
