--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.2.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
+    "react-hook-form": "^7.17.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "1.1.0"
   },
