--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     command: ["npm", "start"]
     volumes:
       - ./frontend:/app/frontend
-      - node-modules:/app/frontend/node_modules
+      - ./frontend/node_modules:/app/frontend/node_modules
     ports:
       - "3000:3000"
     networks:
