--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,3 +7,12 @@ RUN npm install
 
 EXPOSE 3000
 CMD ["npm", "start"]
+FROM node
+
+WORKDIR /app/frontend
+COPY package.json /app/frontend
+
+RUN npm install
+
+EXPOSE 3000
+CMD ["npm", "start"]
