--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.17.5",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "1.1.0"
+    "react-scripts": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
