--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.5",
+    "@mui/material": "^5.0.6",
     "axios": "^0.23.0",
-    "bootstrap": "^5.1.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-facebook-login": "^4.1.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.17.5",
     "react-router-dom": "^5.3.0",
