--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.17.5",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^1.1.0"
+    "react-scripts": "^1.1.0",
+    "redux": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
