--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.6",
+    "@progress/kendo-react-conversational-ui": "^4.10.0",
     "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.23.0",
     "react": "^17.0.2",
@@ -16,6 +19,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^1.1.0",
+    "react-slack-chat": "^1.15.1",
     "redux": "^4.1.2"
   },
   "scripts": {
