--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@mui/material": "^5.0.6",
     "@progress/kendo-react-conversational-ui": "^4.10.0",
     "@reduxjs/toolkit": "^1.6.2",
+    "@types/react-redux": "^7.1.20",
     "axios": "^0.23.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
