--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,4 @@
-FROM node
-
-WORKDIR /app/frontend
-COPY package.json /app/frontend
-
-RUN npm install
-
-EXPOSE 3000
-CMD ["npm", "start"]
-FROM node
+FROM node:16
 
 WORKDIR /app/frontend
 COPY package.json /app/frontend
